Fix css alignment

--- a/css/main.css
+++ b/css/main.css
@@ -200,13 +200,13 @@ h5 {
   background-color: var(--primary-bg-color);
 }
 
-.hero-row {
+.hro-row {
   display: flex;
   flex-wrap: wrap;
 }
 
 .hero-content {
-  text-align: left;
+  text-align: center;
   align-self: center;
   padding: 20px;
   flex-grow: 1;
@@ -236,12 +236,13 @@ h5 {
   display: flex;
   flex: 1 1 356px;
   justify-content: flex-end;
-  margin-top: auto;
+  margin: 30px auto;
 }
 
 .hero-img img {
   display: block;
   position: relative;
+  margin: 30px auto;
 }
 
 .about-social-list {
@@ -253,7 +254,7 @@ h5 {
   justify-content: center;
   align-items: center;
   column-gap: 20px;
-  margin: 40px 0 40px;
+  margin: 30px auto;
   height: 24px;
 
   img {
@@ -275,7 +276,7 @@ h5 {
 
 /* About section */
 .about {
-  padding: 7rem 0;
+  /*padding: 7rem 0;*/
 }
 
 .about-row {
@@ -297,8 +298,9 @@ h5 {
 .skill {
   position: relative;
   display: block;
-  width: 100%;
-  margin-bottom: 30px;
+  width: 75%;
+  justify-content: center;
+  margin: 30px auto;
 }
 
 .skill-title,
@@ -338,6 +340,7 @@ h5 {
   flex-wrap: wrap;
   gap: 50px;
   justify-content: space-between;
+  justify-content: center;
 }
 
 .service-card {
